# mofo

./: .gitattributes  .gitignore  Doxyfile  Makefile.am  README.md  build.sh  configure.ac  removetabs.sh
debian/: changelog  control  copyright  rules
m4/: ax_check_qt.m4
src/: Makefile.am  abstractdaemon.cpp  abstractdaemon.h  accountnicknamewidget.cpp  accountnicknamewidget.h  accountsdialog.cpp  accountsdialog.h  advancedfilterlistwidget.cpp  advancedfilterlistwidget.h  advancedfilterwidget.cpp  advancedfilterwidget.h  analysiswidget.cpp  analysiswidget.h  collapsiblesplitter.cpp  collapsiblesplitter.h  common.h  configdialog.cpp  configdialog.h  endpoints.config  filtereditordialog.cpp  filtereditordialog.h  filtersdialog.cpp  filtersdialog.h  filterselectiondialog.cpp  filterselectiondialog.h  fundamentalsviewerwidget.cpp  fundamentalsviewerwidget.h  gridtableheadermodel.cpp  gridtableheadermodel.h  gridtableheaderview.cpp  gridtableheaderview.h  gridtableview.cpp  gridtableview.h  hoveritemdelegate.cpp  hoveritemdelegate.h  logging.config  main.cpp  mainwindow.cpp  mainwindow.h  mofo.pro  (+53 more)
src/apibase/: Makefile.am  abstractapi.cpp  abstractapi.h  serializedapi.cpp  serializedapi.h  serializedjsonapi.cpp  serializedjsonapi.h  serializedxmlapi.cpp  serializedxmlapi.h
src/calc/: Makefile.am  abstractevcalc.h  alttrinomialcalc.cpp  alttrinomialcalc.h  basiccalc.h  binomialcalc.cpp  binomialcalc.h  blackscholescalc.cpp  blackscholescalc.h  epbinomialcalc.cpp  epbinomialcalc.h  expectedvaluecalc.cpp  expectedvaluecalc.h  krtrinomialcalc.cpp  krtrinomialcalc.h  montecarlocalc.cpp  montecarlocalc.h  trinomialcalc.cpp  trinomialcalc.h
src/db/: Makefile.am  appdb.cpp  appdb.h  candledata.h  createdb_app.sql  createdb_symbol.sql  default_app.sql  default_symbol.sql  fundamentalstablemodel.cpp  fundamentalstablemodel.h  itemmodel.cpp  itemmodel.h  marketproducthours.h  optionchaintablemodel.cpp  optionchaintablemodel.h  optiondata.h  optiontradingitemmodel.cpp  optiontradingitemmodel.h  quotetablemodel.cpp  quotetablemodel.h  sqldb.cpp  sqldb.h  sqltablemodel.cpp  sqltablemodel.h  stringsdb.h  symboldb.cpp  symboldb.h  symboldbs.cpp  symboldbs.h  version10_app.sql  version11_app.sql  version12_app.sql  version13_app.sql  version14_app.sql  version15_app.sql  version2_app.sql  version2_symbol.sql  version3_app.sql  version3_symbol.sql  version4_app.sql  (+7 more)
src/tda/: Makefile.am  dbadaptertd.cpp  dbadaptertd.h  stringsjson.h  stringsoauth.h  tdapi.cpp  tdapi.h  tdcredentialsdialog.cpp  tdcredentialsdialog.h  tdoauthapi.cpp  tdoauthapi.h
src/usdot/: Makefile.am  dbadapterusdot.cpp  dbadapterusdot.h  stringsxml.h  usdotapi.cpp  usdotapi.h
src/util/: Makefile.am  abstractoptionpricing.cpp  abstractoptionpricing.h  altbisection.h  alttrinomial.cpp  alttrinomial.h  baroneadesiwhaley.cpp  baroneadesiwhaley.h  binomial.cpp  binomial.h  bisection.h  bjerksundstensland.cpp  bjerksundstensland.h  bjerksundstensland02.cpp  bjerksundstensland02.h  bjerksundstensland93.cpp  bjerksundstensland93.h  blackscholes.cpp  blackscholes.h  cbnd.cpp  cnd.cpp  coxrossrubinstein.cpp  coxrossrubinstein.h  dualmodeoptionpricing.h  equalprobbinomial.cpp  equalprobbinomial.h  fitpoly.cpp  fitpoly.h  kamradritchken.cpp  kamradritchken.h  montecarlo.cpp  montecarlo.h  newtonraphson.cpp  newtonraphson.h  optiontype.h  phelimboyle.cpp  phelimboyle.h  rollgeskewhaley.cpp  rollgeskewhaley.h  stats.cpp  (+5 more)
