
noinst_LIBRARIES = lib_mofo_calc.a

lib_mofo_calc_a_CXXFLAGS = -I../ $(CLIO_CFLAGS)

lib_mofo_calc_a_SOURCES = \
	alttrinomialcalc.cpp \
	binomialcalc.cpp \
	blackscholescalc.cpp \
	epbinomialcalc.cpp \
	expectedvaluecalc.cpp \
	krtrinomialcalc.cpp \
	montecarlocalc.cpp \
	trinomialcalc.cpp

CLEANFILES = $(BUILT_SOURCES)
