
noinst_LIBRARIES = lib_mofo_util.a

lib_mofo_util_a_CXXFLAGS = -I../ $(CLIO_CFLAGS)

lib_mofo_util_a_SOURCES = \
	abstractoptionpricing.cpp \
	baroneadesiwhaley.cpp \
	binomial.cpp \
	bjerksundstensland.cpp \
	blackscholes.cpp \
	cbnd.cpp \
	cnd.cpp \
	coxrossrubinstein.cpp \
	equalprobbinomial.cpp \
	fitpoly.cpp \
	montecarlo.cpp \
	newtonraphson.cpp \
	phelimboyle.cpp \
	rollgeskewhaley.cpp \
	stats.cpp \
	tests.cpp

CLEANFILES = $(BUILT_SOURCES)
